Completed html-css

--- a/html-css/ex-3/notes.html
+++ b/html-css/ex-3/notes.html
@@ -41,19 +41,28 @@
         .task p {
             margin: 5px 0;
         }
+        ul p {
+            background-color: #f5f5f5;
+            width: auto;
+        }
     </style>
 </head>
 <body>
     <h1>NOTES</h1>
 
     <div class="section">
-        <h2>Exercise - 1: Basic HTML layouts and coding techniques</h2>
+        <h2>Exercise - 3: Classless CSS</h2>
         <div class="task">
             <h3>Tasks</h3>
             <ul>
-                <li>level - 1: created a simple web layout using plain html code</li>
-                <li>level - 2: Implemented golden layout structure</li>
-                <li>level - 2: Implemented tables in html</li>
+                <li>level - 1: Explored classless css</li>
+                <p>
+                   This cleared my doubt about bootstrap and tailwind, all this time I used to think these were classless css.<br>
+                    My personal favorite was skeleton as the styles were very simple
+                </p>
+                <li>level - 2: used new element which i haven't used before "blockqoute"</li>
+                <li>level - 3: Used water.css to style webpage</li>
+                <li>level - 4: Used skeleton to style webpage</li>
             </ul>
         </div>
     </div>
