--- a/html-css/ex-4/notes.html
+++ b/html-css/ex-4/notes.html
@@ -41,20 +41,34 @@
         .task p {
             margin: 5px 0;
         }
+        ul p {
+            background-color: #f5f5f5;
+            width: auto;
+        }
     </style>
 </head>
 <body>
     <h1>NOTES</h1>
 
     <div class="section">
-        <h2>Exercise - 1: Basic HTML layouts and coding techniques</h2>
+        <h2>Exercise - 4: CSS Units and Responsive Design</h2>
         <div class="task">
             <h3>Tasks</h3>
-            <ul>
-                <li>level - 1: created a simple web layout using plain html code</li>
-                <li>level - 2: Implemented golden layout structure</li>
-                <li>level - 2: Implemented tables in html</li>
-            </ul>
+            <p>Explored varoius ways to make a website response</p>
+            <ol>
+                <li>
+                    Through break points
+                </li>
+                <li>
+                    without breakpoints (Fluid website)
+                </li>
+                <li>
+                    using min max and clamp
+                </li>
+                <li>
+                    flexible grids and fluid typography
+                </li>
+            </ol>
         </div>
     </div>
 </body>
