--- a/html-css/ex-5/notes.html
+++ b/html-css/ex-5/notes.html
@@ -41,20 +41,36 @@
         .task p {
             margin: 5px 0;
         }
+        ul p {
+            background-color: #f5f5f5;
+            width: auto;
+        }
     </style>
 </head>
 <body>
     <h1>NOTES</h1>
 
     <div class="section">
-        <h2>Exercise - 1: Basic HTML layouts and coding techniques</h2>
+        <h2>Exercise - 5: CSS Grid Layout</h2>
         <div class="task">
             <h3>Tasks</h3>
-            <ul>
-                <li>level - 1: created a simple web layout using plain html code</li>
-                <li>level - 2: Implemented golden layout structure</li>
-                <li>level - 2: Implemented tables in html</li>
-            </ul>
+            <ol>
+                <li>
+                    used grid-template-areas for the first time and created a golden layout structure
+                </li>
+                <li>
+                    Concepts about overflow contect, what is the difference between overflow-x and overflow-y and many more
+                </li>
+                <li>
+                    used minmax() for grid rows and columns
+                </li>
+                <li>
+                    flexible grids and fluid typography
+                </li>
+                <li>
+                    adjusting styles for both desktop and mobile screens
+                </li>
+            </ol>
         </div>
     </div>
 </body>
