--- a/design/index.html
+++ b/design/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML-CSS Exercises</title>
+    <title>Design Exercises</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
 
@@ -214,66 +214,72 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="heading">HTML-CSS Exercises</h1>
+        <h1 class="heading">Design Exercises</h1>
         <p>Explore the solutions and notes for each exercise by clicking the links below:</p>
 
         <div class="exercise-container">
             <div class="exercise-card">
                 <h2>Exercise 1</h2>
                 <ul>
-                    <li><a href="ex-1/solution-1.html" target="_blank">Solution 1</a></li>
-                    <li><a href="ex-1/solution-2.html" target="_blank">Solution 2</a></li>
-                    <li><a href="ex-1/solution-3.html" target="_blank">Solution 3</a></li>
-                    <li><a href="ex-1/notes.html" target="_blank">Notes</a></li>
+                    <li><a href="ex-2-1/solution-2-1.html" target="_blank">Solution 1</a></li>
+                    <li><a href="ex-2-1/solution-2-2.html" target="_blank">Solution 2</a></li>
+                    <li><a href="ex-2-1/solution-2-3.html" target="_blank">Solution 3</a></li>
+                    <li><a href="ex-2-1/notes.html" target="_blank">Notes</a></li>
                 </ul>
             </div>
 
             <div class="exercise-card">
                 <h2>Exercise 2</h2>
                 <ul>
-                    <li><a href="ex-2/solution-1.html" target="_blank">Solution 1</a></li>
-                    <li><a href="ex-2/solution-2.html" target="_blank">Solution 2</a></li>
-                    <li><a href="ex-2/solution-3.html" target="_blank">Solution 3</a></li>
-                    <li><a href="ex-2/notes.html" target="_blank">Notes</a></li>
+                    <li><a href="ex-2-2/solution-2-1-1.html" target="_blank">Solution 1-1</a></li>
+                    <li><a href="ex-2-2/solution-2-1-2.html" target="_blank">Solution 1-2</a></li>
+                    <li><a href="ex-2-2/solution-2-1-3.html" target="_blank">Solution 1-3</a></li>
+                    <li><a href="ex-2-2/solution-2-2-1.html" target="_blank">Solution 2-1</a></li>
+                    <li><a href="ex-2-2/solution-2-2-2.html" target="_blank">Solution 2-2</a></li>
+                    <li><a href="ex-2-2/solution-2-3-1.html" target="_blank">Solution 3-1</a></li>
+                    <li><a href="ex-2-2/solution-2-3-2.html" target="_blank">Solution 3-2</a></li>
+                    <li><a href="ex-2-2/solution-2-3-3.html" target="_blank">Solution 3-3</a></li>
+                    <li><a href="ex-2-2/notes.html" target="_blank">Notes</a></li>
                 </ul>
             </div>
 
             <div class="exercise-card">
                 <h2>Exercise 3</h2>
                 <ul>
-                    <li><a href="ex-3/solution-1.html" target="_blank">Solution 1</a></li>
-                    <li><a href="ex-3/solution-2.html" target="_blank">Solution 2</a></li>
-                    <li><a href="ex-3/solution-3.html" target="_blank">Solution 3</a></li>
-                    <li><a href="ex-3/solution-4.html" target="_blank">Solution 4</a></li>
-                    <li><a href="ex-3/notes.html" target="_blank">Notes</a></li>
+                    <li><a href="ex-2-3/solution-2-1.html" target="_blank">Solution 1</a></li>
+                    <li><a href="ex-2-3/solution-2-2.html" target="_blank">Solution 2</a></li>
+                    <li><a href="ex-2-3/solution-2-3.html" target="_blank">Solution 3</a></li>
+                    <li><a href="ex-2-3/notes.html" target="_blank">Notes</a></li>
                 </ul>
             </div>
 
             <div class="exercise-card">
                 <h2>Exercise 4</h2>
                 <ul>
-                    <li><a href="ex-4/solution-1.html" target="_blank">Solution 1</a></li>
-                    <li><a href="ex-4/solution-2.html" target="_blank">Solution 2</a></li>
-                    <li><a href="ex-4/solution-3.html" target="_blank">Solution 3</a></li>
-                    <li><a href="ex-4/notes.html" target="_blank">Notes</a></li>
+                    <li><a href="ex-2-4/solution-2-1.html" target="_blank">Solution 1</a></li>
+                    <li><a href="ex-2-4/solution-2-2.html" target="_blank">Solution 2</a></li>
+                    <li><a href="ex-2-4/solution-2-3.html" target="_blank">Solution 3</a></li>
+                    <li><a href="ex-2-4/notes.html" target="_blank">Notes</a></li>
                 </ul>
             </div>
 
             <div class="exercise-card">
                 <h2>Exercise 5</h2>
                 <ul>
-                    <li><a href="ex-5/solution-1.html" target="_blank">Solution 1</a></li>
-                    <li><a href="ex-5/solution-2.html" target="_blank">Solution 2</a></li>
-                    <li><a href="ex-5/solution-3.html" target="_blank">Solution 3</a></li>
-                    <li><a href="ex-5/notes.html" target="_blank">Notes</a></li>
+                    <li><a href="ex-2-5/solution-2-1.html" target="_blank">Solution 1</a></li>
+                    <li><a href="ex-2-5/solution-2-2.html" target="_blank">Solution 2</a></li>
+                    <li><a href="ex-2-5/notes.html" target="_blank">Notes</a></li>
                 </ul>
             </div>
 
             <div class="exercise-card">
                 <h2>Exercise 6</h2>
                 <ul>
-                    <li><a href="ex-6/solution.html" target="_blank">Solution</a></li>
-                    <li><a href="ex-6/notes.html" target="_blank">Notes</a></li>
+                    <li><a href="ex-2-6/solution-2-1.html" target="_blank">Solution</a></li>
+                    <li><a href="ex-2-6/solution-2-2.html" target="_blank">Solution</a></li>
+                    <li><a href="ex-2-6/solution-2-3-1.html" target="_blank">Solution</a></li>
+                    <li><a href="ex-2-6/solution-2-3-2.html" target="_blank">Solution</a></li>
+                    <li><a href="ex-2-6/notes.html" target="_blank">Notes</a></li>
                 </ul>
             </div>
         </div>
