Added LLM links on notes

--- a/html-css/ex-2/notes.html
+++ b/html-css/ex-2/notes.html
@@ -63,6 +63,12 @@
                 <li>level - 2: Created dark mode button to toggle UI</li>
             </ul>
         </div>
+        <div class="task">
+            <h3>LLM Links</h3>
+            <ul>
+                <li><a href="https://chatgpt.com/share/675b69bb-8c68-8013-8924-52d570da8a10">Chatgpt</a></li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
