--- a/html-css/ex-4/notes.html
+++ b/html-css/ex-4/notes.html
@@ -70,6 +70,12 @@
                 </li>
             </ol>
         </div>
+        <div class="task">
+            <h3>LLM Links</h3>
+            <ul>
+                <li><a href="https://chatgpt.com/share/675c10a9-9570-8013-83c5-a19a95230e6b">Chatgpt</a></li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
