--- a/html-css/ex-5/notes.html
+++ b/html-css/ex-5/notes.html
@@ -72,6 +72,12 @@
                 </li>
             </ol>
         </div>
+        <div class="task">
+            <h3>LLM Links</h3>
+            <ul>
+                <li><a href="https://chatgpt.com/share/675c1cee-16fc-8013-82a4-500fad0c7d89">Chatgpt</a></li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
