Completed Day 5 Task

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
         .container {
             display: flex;
+            width: 70%;
             justify-content: center;
             align-items: center;
             flex-wrap: wrap;
@@ -136,6 +137,9 @@
             .container {
                 flex-direction: column;
             }
+            .container {
+                width: 100%;
+            }
         }
     </style>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
@@ -145,7 +149,7 @@
         <div class="card">
             <div class="card-inner">
                 <div class="card-front">
-                    <div class="icon"><i class="fab fa-html5 icon html-icon"></i></div>
+                    <div class="icon"><i class="fab fa-html5 icon html-icon fa-bounce"></i></div>
                     <h2>html-css</h2>
                     Day - 1
                 </div>
@@ -159,7 +163,7 @@
         <div class="card">
             <div class="card-inner">
                 <div class="card-front">
-                    <div class="icon"><i class="fa-solid fa-pen-ruler" style="color: #B197FC;"></i></div>
+                    <div class="icon"><i class="fa-solid fa-pen-ruler fa-bounce" style="color: #B197FC;"></i></div>
                     <h2>design</h2>
                     Day - 2
                 </div>
@@ -173,7 +177,7 @@
         <div class="card">
             <div class="card-inner">
                 <div class="card-front">
-                    <div class="icon"><i class="fa-solid fa-star-half-stroke fa-rotate-270" style="color: #ff2ebd;"></i></div>
+                    <div class="icon"><i class="fa-solid fa-star-half-stroke fa-rotate-270 fa-bounce" style="color: #ff2ebd;"></i></div>
                     <h2>design-review</h2>
                     Day - 3
                 </div>
@@ -188,7 +192,7 @@
         <div class="card">
             <div class="card-inner">
                 <div class="card-front">
-                    <div class="icon"><i class="fa-solid fa-star-half-stroke fa-rotate-270" style="color: #ff2ebd;"></i></div>
+                    <div class="icon"><i class="fa-solid fa-book fa-bounce" style="color: #81f15e;"></i></div>
                     <h2>programming-basics</h2>
                     Day - 4
                 </div>
@@ -196,6 +200,20 @@
                     <p>Day - 4</p>
                     <p>Basic js&ts programming</p>
                     <a href="./programming-basics/index.html" class="btn">View</a>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-inner">
+                <div class="card-front">
+                    <div class="icon"><i class="fa-solid fa-code fa-bounce"></i></div>
+                    <h2>front-end-programming</h2>
+                    Day - 5
+                </div>
+                <div class="card-back">
+                    <p>Day - 5</p>
+                    <p>We have already completed HTML, CSS, JavaScript, and TypeScript. Now, we will bring all of them together and introduce you to modern tools and best practices.</p>
+                    <a href="./front-end-programming/index.html" class="btn">View</a>
                 </div>
             </div>
         </div>
