--- a/front-end-programming/ex-5-1/level-1/solution.html
+++ b/front-end-programming/ex-5-1/level-1/solution.html
@@ -11,6 +11,93 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <style>
+        /* General Styles */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f7f6;
+            color: #333;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        h1 {
+            color: #2d3e50;
+            margin: 20px;
+        }
+
+        /* Button Styling */
+        button {
+            background-color: #007bff;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            margin: 10px;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: background-color 0.3s ease;
+        }
+
+        button:hover {
+            background-color: #0056b3;
+        }
+
+        button i {
+            margin-right: 8px;
+        }
+
+        /* Table Styles */
+        table {
+            width: 80%;
+            border-collapse: collapse;
+            margin-top: 20px;
+            background-color: #ffffff;
+            border-radius: 8px;
+            overflow: hidden;
+        }
+
+        th, td {
+            padding: 12px;
+            text-align: left;
+            border-bottom: 1px solid #ddd;
+        }
+
+        th {
+            background-color: #007bff;
+            color: white;
+        }
+
+        tr:hover {
+            background-color: #f1f1f1;
+        }
+
+        /* Highlighted Row */
+        .highlight {
+            background-color: #e0f7fa;
+        }
+
+        /* Browser Info Styling */
+        #browserInfo {
+            margin-top: 20px;
+            padding: 15px;
+            background-color: #ffffff;
+            border-radius: 8px;
+            width: 80%;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        #browserInfo p {
+            margin: 5px 0;
+            font-size: 14px;
+        }
+    </style>
 </head>
 <body>
     <h1>Student Table</h1>
@@ -25,20 +112,14 @@
                 <th>Age</th>
                 <th>Grade</th>
             </tr>
-            <td>
-                1
-            </td>
-            <td>
-                Yashwant
-            </td>
-            <td>
-                21
-            </td>
-            <td>
-                B
-            </td>
         </thead>
         <tbody>
+            <tr>
+                <td>1</td>
+                <td>Yashwant</td>
+                <td>21</td>
+                <td>B</td>
+            </tr>
         </tbody>
     </table>
 
@@ -51,7 +132,7 @@
             newRow.classList.add('highlight');
 
             newRow.innerHTML = `
-                <td>1</td>
+                <td>2</td>
                 <td>John Doe</td>
                 <td>18</td>
                 <td>A</td>
@@ -59,6 +140,7 @@
 
             tableBody.appendChild(newRow);
         });
+
         document.getElementById('changeFont').addEventListener('click', () => {
             const link = document.createElement('link');
             link.href = 'https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap';
