--- a/front-end-programming/ex-5-3/notes.html
+++ b/front-end-programming/ex-5-3/notes.html
@@ -41,6 +41,21 @@
         .task p {
             margin: 5px 0;
         }
+
+        .level {
+          font-size: 2rem;
+          font-family: 'Courier New', Courier, monospace;
+          font-weight: bold;
+          border-left: 5px solid red;
+          padding-left: 20px;
+          margin-top: 2%;
+          margin-bottom: 2%;
+        }
+
+        img{
+            height: 50%;
+            width: 100%;
+        }
     </style>
 </head>
 <body>
@@ -63,6 +78,11 @@
                 <li><a href="https://chatgpt.com/share/6763f100-373c-8013-8df7-9a78c0447fa6">Chatgpt</a></li>
             </ul>
         </div>
+        <article class="note-card">
+            <div class="level">Assignment Screenshots</div>
+                <img src="ss1.jpeg" alt="ss" class="screenshot">
+                <img src="ss2.jpeg" alt="ss" class="screenshot">
+        </article>
     </div>
 </body>
 </html>
