Updated style and added some other features

--- a/basic-capstone/Streamify/index.html
+++ b/basic-capstone/Streamify/index.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Spotify Songs</title>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="index.css">
-
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 </head>
 <body>
   <div>
@@ -26,9 +24,9 @@
       <option value="high">High (75-100)</option>
     </select>
   </div>
-  <button id="export">Export Filtered Data</button>
-  <div id="pagination"></div>
   <div id="song-list"></div>
-  <script src="index.js" type="module"></script>
+  <div id="pagination"></div>
+  <button id="export">Export Filtered Data</button>
+  <script type="module" src="index.js" defer></script>
 </body>
 </html>
