Hosted Capstone Project

--- a/basic-capstone/index.html
+++ b/basic-capstone/index.html
@@ -214,14 +214,14 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="heading">HTML-CSS Exercises</h1>
-        <p>Explore the solutions and notes for each exercise by clicking the links below:</p>
+        <h1 class="heading">Basic Capstone Project</h1>
+        <p>A Project covering almost all the things that was covered in the past few days</p>
 
         <div class="exercise-container">
             <div class="exercise-card">
                 <h2>Basic Capstone Project</h2>
                 <ul>
-                    <li><a href="ex-1/solution-1.html" target="_blank">Site</a></li>
+                    <li><a href="https://spotify-research.netlify.app/" target="_blank">Site</a></li>
                     <li><a href="notes.html" target="_blank">Notes</a></li>
                 </ul>
             </div>
