--- a/basic-capstone/notes.html
+++ b/basic-capstone/notes.html
@@ -87,6 +87,13 @@
             <h2>CSV DATA (Spotify research data)</h2>
             <img src="4.jpeg" alt="ss" class="screenshot">
         </div>
+        <div class="task">
+            <h3>LLM Links</h3>
+            <ul>
+                <li><a href="https://chatgpt.com/share/676489f1-782c-8013-b2e1-6e0a47cc068b">Chatgpt</a></li>
+                <li><a href="https://v0.dev/chat/IwFdly8nAVT?b=b_4FzPWk1KoDU">Vercel 0</a></li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
