Added weather html element

--- a/basic-capstone/Web-Component-Testing/test-component-1.html
+++ b/basic-capstone/Web-Component-Testing/test-component-1.html
@@ -25,7 +25,7 @@
 
   <weather-component></weather-component>
 
-  <!-- Import the custom weather component script -->
+  <!-- custom weather component script -->
   <script src="../web-component/solution.js"></script>
 
 </body>
