--- a/basic-capstone/Web-Component-Testing/test-component-2.html
+++ b/basic-capstone/Web-Component-Testing/test-component-2.html
@@ -117,8 +117,8 @@
   <!-- Weather Component -->
   <weather-component></weather-component>
 
-  <!-- Import the custom weather component script -->
-  <script src="../web-component/solution.js"></script>
+  <!-- custom weather component script -->
+  <script src="https://bootcamp-yashwant.vercel.app/solution.js"></script>
 
 </body>
 </html>
