--- a/basic-capstone/index.html
+++ b/basic-capstone/index.html
@@ -219,10 +219,21 @@
 
         <div class="exercise-container">
             <div class="exercise-card">
-                <h2>Basic Capstone Project</h2>
+                <h2>Spotify-Research Project</h2>
                 <ul>
                     <li><a href="https://spotify-research.netlify.app/" target="_blank">Site</a></li>
-                    <li><a href="notes.html" target="_blank">Notes</a></li>
+                    <li><a href="Streamify/notes.html" target="_blank">Notes</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="exercise-container">
+            <div class="exercise-card">
+                <h2>Weather Web component</h2>
+                <ul>
+                    <li><a href="web-component/index.html" target="_blank">Site</a></li>
+                    <li><a href="Web-Component-Testing/test-component-1.html" target="_blank">Web Component</a></li>
+                    <li><a href="Web-Component-Testing/test-component-2.html" target="_blank">Hosted Web Component</a></li>
+                    <li><a href="web-component/notes.html" target="_blank">Notes</a></li>
                 </ul>
             </div>
         </div>
