Added Notes and documentaion

--- a/basic-capstone/Streamify/notes.html
+++ b/basic-capstone/Streamify/notes.html
@@ -47,7 +47,7 @@
     <h1>NOTES</h1>
 
     <div class="section">
-        <h2>Exercise - 6: Basic Capstone Project</h2>
+        <h2>Exercise - 1: Spotify Research</h2>
         <div class="task">
             <h3>Approach</h3>
             <ol>
