--- a/basic-capstone/web-component/notes.html
+++ b/basic-capstone/web-component/notes.html
@@ -41,57 +41,56 @@
         .task p {
             margin: 5px 0;
         }
+        code {
+            color: black;
+            background-color: rgb(167, 165, 165);
+            padding: 5px;
+            font-size: 1.2rem;
+        }
     </style>
 </head>
 <body>
     <h1>NOTES</h1>
 
     <div class="section">
-        <h2>Exercise - 6: Basic Capstone Project</h2>
+        <h2>Exercise - 2: HTML component (weather-component)</h2>
         <div class="task">
             <h3>Approach</h3>
             <ol>
-                <strong>Structure and functionality process</strong>
-                <li>Look for a fitting data setfrom kaggle</li>
-                <li>Convert csv to JSON using a tool from the browser</li>
-                <li>Setup project environment</li>
-                <li>Load and show data on the website from the imported JSON file</li>
-                <li>Add search functionalities</li>
-                <li>Select fields which would fit for filter</li>
-                <li>Add filters</li>
-                <li>Pagination on the website</li>
-                <li>Using card to display each data</li>
-                <li>Displaying usefull and information on each card</li>
-                <li>All other functionalities like downloading filtered data as zip file</li>                
-                <p><strong>Note: </strong>It has a play button which directs you to the particular song</p>
-                <strong>Styling</strong>
-                <li>Selecting a suitable color pallete. I have choosen spotify's color pallete because it suits the site I am building</li>
-                <li>Choosing a style for card to show maximum information on the screen</li>                
-                <li>Suitable Layout for the website</li>                
+                <li>used an API to fetch weather</li>
+                <li>Created a html element for that API</li>
+                <li>Tested it with a local project. Imported the element as a local url</li>           
+                <li>Hosted the weather component in Vercel. Made it open for all.</li>           
+                <li>Imported the hosted url (weather-component) in a script and used it.</li>           
+            </ol>
+        </div>
+        <div class="task">
+            <h3>How to use this component</h3>
+            <ol>
+                <li>Include the script in your project</li>
+                <code><i>&lt;script src="https://bootcamp-yashwant.vercel.app/solution.js"&gt;&lt;/script&gt;</i></code>
+                <li>Use the weather element as mentioned below</li>
+                <code><i>&lt;weather-component&gt;&lt;/weather-component&gt;</i></code>      
             </ol>
         </div>
         <div class="section">
             <h2>Website</h2>
-            <p><a href="https://spotify-research.netlify.app/">Streamify</a></p>
+            <p><a href="https://bootcamp-yashwant.netlify.app/basic-capstone/web-component">weather-component</a></p>
         </div>
         <div class="section">
             <h2>UI/UX</h2>
             <img src="1.jpeg" alt="ss" class="screenshot">
+        </div>
+        <div class="section">
+            <h2>Component (Usage)</h2>
             <img src="2.jpeg" alt="ss" class="screenshot">
-        </div>
-        <div class="section">
-            <h2>Performance</h2>
             <img src="3.jpeg" alt="ss" class="screenshot">
-        </div>
-        <div class="section">
-            <h2>CSV DATA (Spotify research data)</h2>
-            <img src="4.jpeg" alt="ss" class="screenshot">
         </div>
         <div class="task">
             <h3>LLM Links</h3>
             <ul>
-                <li><a href="https://chatgpt.com/share/676489f1-782c-8013-b2e1-6e0a47cc068b">Chatgpt</a></li>
-                <li><a href="https://v0.dev/chat/IwFdly8nAVT?b=b_4FzPWk1KoDU">Vercel 0</a></li>
+                <li><a href="https://chatgpt.com/share/6765d17d-3cb4-8013-8415-3f18487e7eae">Chatgpt</a></li>
+                <li><a href="https://chatgpt.com/share/67670bd3-20d0-8013-b14b-05e0046bab37">Chatgpt</a></li>
             </ul>
         </div>
     </div>
