Added Loading page to the research page (Streamify)

--- a/basic-capstone/Streamify/index.html
+++ b/basic-capstone/Streamify/index.html
@@ -42,6 +42,9 @@
       <button id="export">Download Filtered Data <i class="fas fa-download"></i></button>
     </div>
     <div id="pagination"></div>
+    <div id="loading" style="display: none;">
+      <p>Loading songs...</p>
+    </div>
     <div id="song-list"></div>
   </div>
   <script type="module" src="index.js" defer></script>
