Done with the SSG

--- a/basic-capstone/index.html
+++ b/basic-capstone/index.html
@@ -225,8 +225,6 @@
                     <li><a href="Streamify/notes.html" target="_blank">Notes</a></li>
                 </ul>
             </div>
-        </div>
-        <div class="exercise-container">
             <div class="exercise-card">
                 <h2>Weather Web component</h2>
                 <ul>
@@ -234,6 +232,13 @@
                     <li><a href="Web-Component-Testing/test-component-1.html" target="_blank">Web Component</a></li>
                     <li><a href="Web-Component-Testing/test-component-2.html" target="_blank">Hosted Web Component</a></li>
                     <li><a href="web-component/notes.html" target="_blank">Notes</a></li>
+                </ul>
+            </div>
+            <div class="exercise-card">
+                <h2>Static Site Generation</h2>
+                <ul>
+                    <li><a href="SSG/index.html" target="_blank">Site</a></li>
+                    <li><a href="SSG/notes.html" target="_blank">Notes</a></li>
                 </ul>
             </div>
         </div>
