--- a/basic-capstone/index.html
+++ b/basic-capstone/index.html
@@ -239,6 +239,7 @@
                 <ul>
                     <li><a href="SSG/index.html" target="_blank">Site</a></li>
                     <li><a href="SSG/notes.html" target="_blank">Notes</a></li>
+                    <li><a href="#" target="_blank">Design Document (Not Completed)</a></li>
                 </ul>
             </div>
         </div>
