Added hosted links

--- a/basic-capstone/index.html
+++ b/basic-capstone/index.html
@@ -237,7 +237,7 @@
             <div class="exercise-card">
                 <h2>Static Site Generation</h2>
                 <ul>
-                    <li><a href="SSG/index.html" target="_blank">Site</a></li>
+                    <li><a href="https://shop-o-list.vercel.app/" target="_blank">Site</a></li>
                     <li><a href="SSG/notes.html" target="_blank">Notes</a></li>
                     <li><a href="#" target="_blank">Design Document (Not Completed)</a></li>
                 </ul>
