--- a/basic-capstone/SSG/notes.html
+++ b/basic-capstone/SSG/notes.html
@@ -68,7 +68,7 @@
         </div>
         <div class="section">
             <h2>Website</h2>
-            <p><a href="https://spotify-research.netlify.app/">Shop List</a></p>
+            <p><a href="https://shop-o-list.vercel.app/">Shop List</a></p>
         </div>
         <div class="section">
             <h2>UI/UX</h2>
