--- a/basic-capstone/index.html
+++ b/basic-capstone/index.html
@@ -239,7 +239,7 @@
                 <ul>
                     <li><a href="https://shop-o-list.vercel.app/" target="_blank">Site</a></li>
                     <li><a href="SSG/notes.html" target="_blank">Notes</a></li>
-                    <li><a href="#" target="_blank">Design Document (Not Completed)</a></li>
+                    <li><a href="SSG/design_document.html" target="_blank">Design Document</a></li>
                 </ul>
             </div>
         </div>
