--- a/index.html
+++ b/index.html
@@ -253,7 +253,20 @@
                     </div>
                 </div>
             </div>
-            
+            <div class="card">
+                <div class="card-inner">
+                    <div class="card-front">
+                        <div class="icon"><i class="fa-regular fa-file-code fa-bounce" style="color: #1DB954;"></i></div>
+                        <h2></h2>
+                        Day - 6
+                    </div>
+                    <div class="card-back">
+                        <p>Day - 6</p>
+                        <p>A small glance of what I learnt in this journey</p>
+                        <a href="./basic-capstone/index.html" class="btn">View</a>
+                    </div>
+                </div>
+            </div>            
         </div>
     </div>
 
