Added Hosted Link

--- a/basic-review/index.html
+++ b/basic-review/index.html
@@ -227,8 +227,8 @@
             <div class="exercise-card">
                 <h2>React Weather component</h2>
                 <ul>
-                    <li><a href="https://react-weather-component.netlify.app/" target="_blank">Site</a></li>
-                    <li><a href="react-weather-component/notes.html" target="_blank">Notes</a></li>
+                    <li><a href="https://react-weather-component.vercel.app/" target="_blank">Site</a></li>
+                    <li><a href="https://bootcamp-yashwant.netlify.app/basic-review/react-weather-component/notes.html" target="_blank">Notes</a></li>
                 </ul>
             </div>
         </div>
