--- a/index.html
+++ b/index.html
@@ -258,12 +258,12 @@
                     <div class="card-front">
                         <div class="icon"><i class="fa-regular fa-file-code fa-bounce" style="color: #1DB954;"></i></div>
                         <h2></h2>
-                        Day - 6
+                        Day - 7
                     </div>
                     <div class="card-back">
-                        <p>Day - 6</p>
-                        <p>A small glance of what I learnt in this journey</p>
-                        <a href="./basic-capstone/index.html" class="btn">View</a>
+                        <p>Day - 7</p>
+                        <p>Basic Review and past projects upgraded using react</p>
+                        <a href="basic-review/index.html" class="btn">View</a>
                     </div>
                 </div>
             </div>            
