Hosted Day 8, review remaining

--- a/basic-review/index.html
+++ b/basic-review/index.html
@@ -231,6 +231,13 @@
                     <li><a href="https://bootcamp-yashwant.netlify.app/basic-review/react-weather-component/notes.html" target="_blank">Notes</a></li>
                 </ul>
             </div>
+            <div class="exercise-card">
+                <h2>Spotify-Research Project (REACT)</h2>
+                <ul>
+                    <li><a href="https://streamify-react.vercel.app/" target="_blank">Site</a></li>
+                    <li><a href="Streamify/notes.html" target="_blank">Notes</a></li>
+                </ul>
+            </div>
         </div>
     </div>
 </body>
