--- a/index.html
+++ b/index.html
@@ -256,8 +256,8 @@
             <div class="card">
                 <div class="card-inner">
                     <div class="card-front">
-                        <div class="icon"><i class="fa-regular fa-file-code fa-bounce" style="color: #1DB954;"></i></div>
-                        <h2></h2>
+                        <div class="icon"><i class="fa-brands fa-react fa-bounce" style="color: #FFD43B;"></i></div>
+                        <h2>Basic Review</h2>
                         Day - 7
                     </div>
                     <div class="card-back">
