--- a/basic-review/Streamify/notes.html
+++ b/basic-review/Streamify/notes.html
@@ -73,7 +73,7 @@
         </div>
         <div class="section">
             <h2>Website</h2>
-            <p><a href="https://spotify-research.netlify.app/">Streamify</a></p>
+            <p><a href="https://streamify-react.vercel.app/">Streamify</a></p>
         </div>
         <div class="section">
             <h2>UI/UX</h2>
