--- a/basic-capstone/SSG/index.html
+++ b/basic-capstone/SSG/index.html
@@ -1,69 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shop List</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="index.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+    <link rel="stylesheet" href="index.css" />
     <link rel="icon" type="image/png" href="public/shop-list.png" />
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <div class="header-content">
-            <h1>Shop List</h1>
-            <nav>
-                <a href="#" class="nav-link">Home</a>
-                <a href="#" class="nav-link">Categories</a>
-                <a href="#" class="nav-link">Deals</a>
-                <a href="#" class="nav-link">Contact</a>
-            </nav>
-        </div>
+      <div class="header-content">
+        <h1>Shop List</h1>
+        <nav>
+          <a href="#" class="nav-link">Home</a>
+          <a href="#" class="nav-link">Categories</a>
+          <a href="#" class="nav-link">Deals</a>
+          <a href="#" class="nav-link">Contact</a>
+        </nav>
+      </div>
     </header>
     <main>
-        <div class="hero">
-            <h2>Discover Premium Products</h2>
-            <p>Explore our curated collection of high-quality items</p>
+      <div class="hero">
+        <h2>Discover Premium Products</h2>
+        <p>Explore our curated collection of high-quality items</p>
+      </div>
+      <div class="filters-container">
+        <div class="search-container">
+          <div class="search-input-wrapper">
+            <input type="text" id="search" placeholder="Search products..." />
+            <button id="search-btn"><i class="fas fa-search"></i></button>
+          </div>
+          <div id="search-suggestions" class="search-suggestions"></div>
         </div>
-        <div class="filters-container">
-            <div class="search-container">
-                <div class="search-input-wrapper">
-                    <input type="text" id="search" placeholder="Search products..." />
-                    <button id="search-btn"><i class="fas fa-search"></i></button>
-                </div>
-                <div id="search-suggestions" class="search-suggestions"></div>
-            </div>
-            <div class="filter-group">
-                <div class="price-filter">
-                    <label for="min-price">Min Price:</label>
-                    <input type="number" id="min-price" min="0">
-                    <label for="max-price">Max Price:</label>
-                    <input type="number" id="max-price" min="0">
-                </div>
-                <div class="category-filter">
-                    <select id="category-filter">
-                        <option value="">All Categories</option>
-                    </select>
-                </div>
-            </div>
+        <div class="filter-group">
+          <div class="price-filter">
+            <label for="min-price">Min Price:</label>
+            <input type="number" id="min-price" min="0" />
+            <label for="max-price">Max Price:</label>
+            <input type="number" id="max-price" min="0" />
+          </div>
+          <div class="category-filter">
+            <select id="category-filter">
+              <option value="">All Categories</option>
+            </select>
+          </div>
         </div>
-        <div class="products-container" id="products-container"></div>
-        <div class="pagination" id="pagination">
-            <button id="prev-page" class="page-btn"><i class="fas fa-chevron-left"></i></button>
-            <span id="current-page"></span>
-            <button id="next-page" class="page-btn"><i class="fas fa-chevron-right"></i></button>
-        </div>
+      </div>
+      <div class="products-container" id="products-container"></div>
+      <div class="pagination" id="pagination">
+        <button id="prev-page" class="page-btn">
+          <i class="fas fa-chevron-left"></i>
+        </button>
+        <span id="current-page"></span>
+        <button id="next-page" class="page-btn">
+          <i class="fas fa-chevron-right"></i>
+        </button>
+      </div>
     </main>
     <footer>
-        <div class="footer-content">
-            <p>&copy; 2024 Shop List. All rights reserved.</p>
-            <div class="social-links">
-                <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
-                <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
-                <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
-            </div>
+      <div class="footer-content">
+        <p>&copy; 2024 Shop List. All rights reserved.</p>
+        <div class="social-links">
+          <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
+          <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
+          <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
         </div>
+      </div>
     </footer>
     <script type="module" src="index.js"></script>
-</body>
+  </body>
 </html>
