--- a/basic-capstone/web-component/index.html
+++ b/basic-capstone/web-component/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Weather Component</title>
-  <style>
-    body {
-      display: flex;
-    }
-  </style>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Weather Component</title>
+    <style>
+      body {
+        display: flex;
+      }
+    </style>
+  </head>
+  <body>
     <script src="solution.js"></script>
     <weather-component></weather-component>
-</body>
+  </body>
 </html>
