--- a/basic-review/index.html
+++ b/basic-review/index.html
@@ -219,9 +219,9 @@
 
         <div class="exercise-container">
             <div class="exercise-card">
-                <h2>Basic Review</h2>
+                <h2>Capstone Projects Review</h2>
                 <ul>
-                    <li><a href="#" target="_blank">Review</a></li>
+                    <li><a href="review/index.html" target="_blank">Review</a></li>
                 </ul>
             </div>
             <div class="exercise-card">
