Added review on linked post

--- a/basic-review/index.html
+++ b/basic-review/index.html
@@ -219,9 +219,10 @@
 
         <div class="exercise-container">
             <div class="exercise-card">
-                <h2>Capstone Projects Review</h2>
+                <h2>Basic Review</h2>
                 <ul>
-                    <li><a href="review/index.html" target="_blank">Review</a></li>
+                    <li><a href="review/index.html" target="_blank">Review on Capstone Projects</a></li>
+                    <li><a href="review/empathetic-programming-review.html" target="_blank">Review on LinkedIn Post</a></li>
                 </ul>
             </div>
             <div class="exercise-card">
