Changes in card styles at landing page

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         }
 
         .card {
-            width: 300px;
-            height: 400px;
+            width: 180px;
+            height: 280px;
             perspective: 1000px;
             cursor: pointer;
         }
@@ -89,6 +89,10 @@
             color: white;
         }
 
+        .card-back p{
+            font-size: 0.8rem;
+        }
+
         .card::before {
             animation: colorShift 10s ease-in-out infinite alternate;
         }
@@ -99,7 +103,7 @@
         }
 
         h2 {
-            font-size: 1.8rem;
+            font-size: 1.3rem;
             margin-bottom: 1rem;
             color: var(--primary-color);
         }
@@ -234,7 +238,7 @@
                     </div>
                     <div class="card-back">
                         <p>Day - 5</p>
-                        <p>We have already completed HTML, CSS, JavaScript, and TypeScript. Now, we will bring all of them together and introduce you to modern tools and best practices.</p>
+                        <p>Bringing all the learn things together and introducing you to modern tools and best practices.</p>
                         <a href="./front-end-programming/index.html" class="btn">View</a>
                     </div>
                 </div>
