--- a/index.html
+++ b/index.html
@@ -166,6 +166,19 @@
           width: 100%;
         }
       }
+
+      footer {
+        font-family: "Poppins", sans-serif;
+        display: flex;
+        justify-content: center;
+        padding: 5%;
+        background-color: var(--primary-color);
+        color: var(--secondary-color);
+      }
+
+      ::-webkit-scrollbar {
+        display: none;
+      }
     </style>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
@@ -315,6 +328,9 @@
         </div>
       </div>
     </div>
+    <footer>
+      &copy; UI Bootcamp 2024 | Yashwant
+    </footer>
 
     <script>
       document.querySelectorAll(".card").forEach((card) => {
