Changed streamify (research project) host url

--- a/basic-capstone/index.html
+++ b/basic-capstone/index.html
@@ -250,7 +250,7 @@
           <h2>Spotify-Research Project</h2>
           <ul>
             <li>
-              <a href="https://spotify-research.netlify.app/" target="_blank"
+              <a href="https://spotify-research-seven.vercel.app/" target="_blank"
                 >Site</a
               >
             </li>
