--- a/basic-capstone/Streamify/notes.html
+++ b/basic-capstone/Streamify/notes.html
@@ -72,7 +72,7 @@
         </div>
         <div class="section">
             <h2>Website</h2>
-            <p><a href="https://spotify-research.netlify.app/">Streamify</a></p>
+            <p><a href="https://spotify-research-seven.vercel.app/">Streamify</a></p>
         </div>
         <div class="section">
             <h2>UI/UX</h2>
