--- a/index.html
+++ b/index.html
@@ -326,11 +326,28 @@
             </div>
           </div>
         </div>
+        <div class="card">
+          <div class="card-inner">
+            <div class="card-front">
+              <div class="icon">
+                <i
+                  class="fa-solid fa-stethoscope fa-bounce"
+                  style="color: #66d9ff"
+                ></i>
+              </div>
+              <h2>Realworld-project-1</h2>
+              Day - 8
+            </div>
+            <div class="card-back">
+              <p>Day - 8</p>
+              <p>Realworld project based on Disease Ontology Exploration</p>
+              <a href="Realworld-project-1/index.html" class="btn">View</a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-    <footer>
-      &copy; UI Bootcamp 2024 | Yashwant
-    </footer>
+    <footer>&copy; UI Bootcamp 2024 | Yashwant</footer>
 
     <script>
       document.querySelectorAll(".card").forEach((card) => {
