--- a/Realworld-project-1/index.html
+++ b/Realworld-project-1/index.html
@@ -254,6 +254,17 @@
             <li><a href="disease-widget/notes.html" target="_blank">Notes</a></li>
           </ul>
         </div>
+        <div class="exercise-card">
+          <h2>Developer skills in the era of LLMs</h2>
+          <ul>
+            <li>
+              <a href="https://www.linkedin.com/pulse/developer-skills-we-look-era-ai-ramarao-kanneganti-dtkgc/" target="_blank"
+                >Post</a
+              >
+            </li>
+            <li><a href="Developer-skills-post-review.html" target="_blank">Review</a></li>
+          </ul>
+        </div>
       </div>
     </div>
   </body>
